Create comprehensive README documentation and fix build configuration
Co-authored-by: 0xFaysal <153068178+0xFaysal@users.noreply.github.com>